<package format="3">
  <name>simple_slam_2d</name>
  <version>0.0.0</version>
  <description>simple_slam_2d</description>
  <maintainer email="mamoru.sobue@tier4.jp">Mamoru Sobue</maintainer>
  <license>TODO</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
	<build_type>ament_cargo</build_type>
  </export>
</package>
